# video-bot-r

./: .env.example  .gitignore  LICENSE  Procfile  README.md  app.py  backup3-4-2026.sql  bot.py  bot_manager.py  build.sh  check_file_ids.py  config.py  db_audit.py  db_compat_patch.py  db_manager.py  db_manager_v3.py  db_optimizer.py  db_pool.py  extract_channel_thumbnails.py  fetch_history.py  fix_database_file_ids.py  fix_videos_professional.py  gunicorn_config.py  handlers.py  history_cleaner.py  main.py  migrate_database.py  pyproject.toml  render.yaml  requirements.txt  reset_file_ids.py  run.py  state_manager.py  stream_utils.py  update_metadata.py  update_thumbnails.py  utils.py  webhook_bot.py  webhook_bot_v3.py
.brainsync/: .context-key  agent-rules.md  shared-context.json
.cursor/: active-context.md
app/: __init__.py  bot.py  config.py  database.py  gunicorn_config.py  logger.py  state.py  state_manager.py  utils.py  webhook.py
config/: config.py  constants.py
core/: bot.py  db.py  state_manager.py
handlers/: __init__.py  admin_handlers.py  admin_message_handler.py  advanced_search_handlers.py  button_styles.py  callback_handlers.py  comment_handlers.py  favorites_handlers.py  group_handlers.py  helpers.py  inline_handlers.py  user_handlers.py
legacy/: bot.py  keep_alive.py
migrations/: 0001_initial.sql
repositories/: bot_settings_repository.py  category_repository.py  favorite_repository.py  history_repository.py  rating_repository.py  required_channels_repository.py  user_repository.py  user_state_repository.py  video_repository.py
scratch/: check_counts.py
scripts/: check_file_ids.py  convert_docs_to_video.py  db_audit.py  db_compat_patch.py  (+10 more)
(+55 files in other folders)
